--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -18,7 +18,7 @@
     padding: 4rem 4rem 0
     overflow: hidden
 
-    &:hover, &:active
+    &:hover
       .overlay
         opacity: 1
 
@@ -125,12 +125,23 @@
       @for $i from 1 through 10
         &:nth-child(#{$i})
           .details
-            animation-delay: #{($i - 1) * 0.2s + 3.2}
+            animation-delay: 3.2s
+
+            @media screen and (min-width: 1024px)
+              animation-delay: #{($i - 1) * 0.2s + 3.2}
 
   &.browseCase
+    @media screen and (min-width: 701px)
+      width: 100%
+      left: 0
+
     > .project
       &:nth-child(1), &:nth-child(2), &:nth-child(3)
-        grid-column: span 2
+        grid-column: span 3
+
+        @media screen and (min-width: 1024px)
+          grid-column: span 2
+
 
   @media screen and (max-width: 1000px)
     > .project
@@ -153,14 +164,14 @@
     bottom: 4rem
     position: absolute
     display: flex
-    align-items: center
+    align-items: flex-end
 
     @media screen and (min-width: #{$breakpoint-desktop})
-      transform: translateX(calc(-100% + 3.8rem))
+      transform: translateX(calc(-100% + 6.7rem))
       transition: transform .3s ease-out
 
     .arrow
-      width: 3.8rem
+      width: 6.7rem
       margin-left: 1rem
 
   // special rules for cases
