--- a/src/components/filter-block.sass
+++ b/src/components/filter-block.sass
@@ -8,6 +8,13 @@
   grid-gap: 2.5rem
   grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr))
 
+
+  @media screen and (min-width: 1024px)
+    grid-template-columns: repeat(4, 1fr)
+
+  @media screen and (min-width: 1100px)
+    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr))
+
   a
     color: white
 
