--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -43,6 +43,8 @@
 
       &.languageToggle
         margin-left: auto
+        position: relative
+        top: -.2rem
 
     > .navMenu
       background: none
