--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -17,19 +17,20 @@
     > .welcome
       align-items: center
       display: flex
-      height: #{'max(60vh, 100vh - 30rem)'}
+      height: #{'max(60vh, 100vh - 100rem)'}
       margin-top: -19rem
-      min-height: 50rem
+      min-height: 45rem
       position: relative
 
       > h1
         font-weight: bold
         margin-left: 5rem
+        margin-top: 10rem
         max-width: 75rem
         position: relative
         z-index: 1
-        opacity: 0
-        animation: slideInLeft 0.3s, fadeIn 0.3s forwards
+        // opacity: 0
+        // animation: slideInLeft 0.3s, fadeIn 0.3s forwards
 
         &.firstView
           opacity: 0
@@ -234,7 +235,7 @@
 
     @media screen and (max-width: 1000px)
       > .welcome > h1
-        margin: auto
+        //margin: auto
 
     @media screen and (max-width: 560px)
       > .information
