--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -29,8 +29,10 @@
         max-width: 75rem
         position: relative
         z-index: 1
-        // opacity: 0
-        // animation: slideInLeft 0.3s, fadeIn 0.3s forwards
+
+        &:not(.categoryChange)
+          opacity: 0
+          animation: slideInLeft 0.3s, fadeIn 0.3s forwards
 
         &.firstView
           opacity: 0
