--- a/src/routes/work.sass
+++ b/src/routes/work.sass
@@ -29,8 +29,14 @@
         max-width: 84rem
         position: relative
         z-index: 1
-        // opacity: 0
-        // animation: slideInLeft 0.3s, fadeIn 0.3s forwards
+
+        &:not(.categoryChange)
+          opacity: 0
+          animation: slideInLeft 0.3s, fadeIn 0.3s forwards
+
+        &.firstView
+          opacity: 0
+          animation: slideInBottom 0.8s 1.1s, fadeIn 0.8s 1.1s forwards
 
         > span
           color: $color-red
@@ -40,7 +46,21 @@
         margin-top: -20rem
         position: absolute
 
-    > .projectsHeader
+    .work
+      &.firstView
+        opacity: 0
+        transform: translateY(-8rem)
+        animation: slideInTop 0.6s ease 2.2s forwards, fadeIn 1s ease 1.7s forwards
+
+        @media screen and (min-width: 801px)
+          transform: translateY(-15rem)
+
+        .text, .filterBlock
+          opacity: 0
+          transform: translateY(-.8rem)
+          animation: fadeInTop .8s ease 2.6s forwards
+
+    .projectsHeader
       position: relative
       display: flex
       flex-direction: column
@@ -73,25 +93,25 @@
         @media screen and (min-width: 1024px)
           margin: 0 0 0 5rem
 
-    > .projects
-        display: grid
-        grid-gap: 2rem
-        grid-template-columns: auto
-        margin-top: 5rem
+    .projects
+      display: grid
+      grid-gap: 2rem
+      grid-template-columns: auto
+      margin-top: 5rem
 
-        .button
-          left: calc(100% - 5rem)
-          position: relative
-          top: 2rem
-          transform: translateX(-100%)
+      .button
+        left: calc(100% - 5rem)
+        position: relative
+        top: 2rem
+        transform: translateX(-100%)
 
-        > .project
-          background: #eee
-          height: 34rem
+      > .project
+        background: #eee
+        height: 34rem
 
-          &:first-child
-            grid-column: span 2
-            height: 40rem
+        &:first-child
+          grid-column: span 2
+          height: 40rem
 
     > .partners
       margin-top: 24rem
