--- a/src/routes/work.sass
+++ b/src/routes/work.sass
@@ -11,8 +11,11 @@
     height: 100%
     margin: 0 auto
     max-width: $max-width
-    padding: 5rem 3rem 25rem
+    padding: 5rem 3rem 10rem
     width: 100%
+
+    @media screen and (min-width: 1025px)
+      padding: 5rem 3rem 25rem
 
     > .welcome
       align-items: center
