--- a/src/components/projects-block.sass
+++ b/src/components/projects-block.sass
@@ -42,7 +42,7 @@
       animation: animateIn .5s ease forwards
       opacity: 0
 
-      @for $i from 1 through 10
+      @for $i from 1 through 20
         &:nth-child(#{$i})
           animation-delay: #{($i - 1) * 0.1s}
 
@@ -112,7 +112,7 @@
         //   height: 100%
         //   min-width: 100%
 
-    @for $i from 1 through 20
+    @for $i from 1 through 40
       @if $i % 5 == 1 or $i % 5 == 2
         &:nth-child(#{$i})
           grid-column: span 3
@@ -122,13 +122,13 @@
 
   &.firstView
     .project
-      @for $i from 1 through 10
+      @for $i from 1 through 20
         &:nth-child(#{$i})
           .details
             animation-delay: 3.2s
 
             @media screen and (min-width: 1024px)
-              animation-delay: #{($i - 1) * 0.2s + 3.2}
+              animation-delay: #{($i - 1) * 0.15s + 3.2s}
 
   &.browseCase
     @media screen and (min-width: 701px)
