Nordish market case, two first sections

--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -68,6 +68,9 @@
         > a:not(:last-child)
           margin-right: 2rem
 
+        .link
+          margin-top: 6rem
+
         &.center
           text-align: center
 
