--- a/src/components/header.sass
+++ b/src/components/header.sass
@@ -169,7 +169,7 @@
                 visibility: visible
 
   &.dark
-    background: white
+    background: none
 
     > .inner
       color: black
