--- a/src/cases/components/hero-header.sass
+++ b/src/cases/components/hero-header.sass
@@ -7,10 +7,10 @@
   margin: auto
 
   &.dark
-    .type
+    > .type
       color: white
 
-  .type
+  > .type
     font-size: 2rem
     letter-spacing: .1rem
     text-transform: uppercase
@@ -19,7 +19,6 @@
     margin-bottom: 3.5rem
 
   > h1
-    color: $color-red
     font-size: 5rem
     font-weight: bold
     margin-bottom: 1rem
@@ -30,7 +29,7 @@
 
   @media screen and (max-width: $small-grid)
 
-    .type
+    > .type
       font-size: 1.8rem
 
     > h1
