--- a/src/cases/components/text-block.sass
+++ b/src/cases/components/text-block.sass
@@ -11,6 +11,21 @@
     padding: $global-padding
     font-weight: normal
 
+    > .titleIcon
+      display: flex
+      align-items: center
+      margin-bottom: 2rem
+
+      img
+        display: inline-block
+        width: 6.2rem
+        border-radius: 50%
+        box-shadow: 0px .7rem 2rem rgba(27, 102, 101, 0.1)
+        margin-right: 2rem
+
+        @media screen and (min-width: 900px)
+          width: 8.2rem
+
     > h1
       white-space: pre-line
 
@@ -59,3 +74,39 @@
     @media screen and (max-width: 1190px)
       > .content.fullWidth > p
         max-width: none
+
+  \:global(.nordish)
+    > .content
+      flex-wrap: unset
+      flex-direction: column
+
+      @media screen and (min-width: 900px)
+        flex-direction: row
+
+      > p:nth-of-type(2)
+        position: relative
+
+        @media screen and (min-width: 900px)
+          padding-left: 9rem
+
+        &::before
+          content: ""
+          position: absolute
+          left: -5%
+          display: block
+          background: url('../../images/cases/nordish-bg-illustration.svg') no-repeat
+          background-size: contain
+          transform: rotate(-20deg)
+          width: 100%
+          height: 100%
+          z-index: -1
+
+      &.fullWidth > p
+        max-width: none
+
+        @media screen and (min-width: 900px)
+          max-width: 56rem
+
+        // @media screen and (min-width: 1191px)
+
+        //   max-width: none
