Gradient fix for safari

--- a/src/cases/components/three-block.sass
+++ b/src/cases/components/three-block.sass
@@ -135,7 +135,7 @@
           right: 0
           width: 25%
           height: 100%
-          background: linear-gradient(to left, white, transparent)
+          background: linear-gradient(to left, white, rgba(255, 255, 255, 0))
 
       .block:nth-child(2)
         margin-top: 4rem
