--- a/src/cases/components/three-block.sass
+++ b/src/cases/components/three-block.sass
@@ -183,14 +183,21 @@
   .stackedImages
     position: relative
     width: 100%
-    height: 100%
+    height: auto
+
+    @media screen and (min-width: $small-grid + 51px)
+      width: 100%
+      height: 100%
 
     img
-      top: 50%
+      top: 0
       left: 0
-      transform: translateY(-50%)
       max-width: 100%
       opacity: 0
+
+      @media screen and (min-width: $small-grid + 51px)
+        top: 50%
+        transform: translateY(-50%)
 
       &:nth-of-type(1)
         position: relative
