Other projects block mobile fix, updated image in Nordish case

--- a/src/cases/components/projects-block.sass
+++ b/src/cases/components/projects-block.sass
@@ -27,15 +27,21 @@
 
       > .button
         position: absolute
-        right: -5rem
+        right: -3rem
         margin-top: -1rem
 
       @media screen and (max-width: 600px)
+
+        > h2
+          text-align: center
+
         > .button
           position: relative
           right: auto
-          left: -5rem
+          left: auto
           margin-top: 0
+
+
 
     > .project
 
