--- a/src/components/button.sass
+++ b/src/components/button.sass
@@ -103,6 +103,7 @@
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.28)
 
   &.transparent
+    padding: 2.2rem 3rem
     background: none
     color: $color-red
 
