Started adding Wake up problem case

--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -77,6 +77,13 @@
           > p
             margin: auto
 
+        &.enableOrderChange
+          display: flex
+          flex-direction: column
+
+          &.center
+            align-items: center
+
     &.block
       > .content
         position: relative
