--- a/src/cases/components/center-block.sass
+++ b/src/cases/components/center-block.sass
@@ -120,6 +120,7 @@
           text-align: center
 
           > h1
+            padding: 0 0 2rem 0
             margin-bottom: 1rem
 
           > a > img
