--- a/src/cases/components/three-block.sass
+++ b/src/cases/components/three-block.sass
@@ -80,7 +80,6 @@
           max-width: 100%
 
       @media screen and (max-width: $medium-grid)
-
         > .block
 
           &:nth-child(1)
@@ -152,7 +151,7 @@
           margin: 0
           justify-content: center
 
-  &.nordish-tech, &.nordish-kitchen
+  &.vertical-center-content, &.nordish-kitchen
     > .inner  > .blocks >
       .block:nth-child(1), .block:nth-child(2)
         margin-top: 4rem
