--- a/src/cases/wake-up-problem.sass
+++ b/src/cases/wake-up-problem.sass
@@ -22,10 +22,154 @@
 
     .alarminglyEffective
       overflow: hidden
+      text-align: center
+
+      @media screen and (min-width: 941px)
+        text-align: unset
 
       \:global(.inView)
         img
           animation: shake .5s linear .6s
+
+    .challengeSection
+      text-align: center
+
+      @media screen and (min-width: 941px)
+        text-align: unset
+
+      h1
+        color: #161D2B
+
+      .challenge
+        position: relative
+        display: flex
+        flex-direction: column
+        width: 100%
+        max-width: 40rem
+        background: #FFFFFF
+        box-shadow: 0px 4.27479px 100px rgba(0, 0, 0, 0.1)
+        border-radius: 2rem
+        font-family: 'Arial', sans-serif
+        color: #000000
+        height: 48rem
+
+        @media screen and (min-width: 350px)
+          height: 54rem
+
+        .challengeHeader
+          text-align: center
+          margin-top: -2rem
+          padding-bottom: 2rem
+          border-bottom: .1rem solid #F5F5F5
+
+          h2
+            font-size: 2.2rem
+            font-weight: 600
+
+            @media screen and (min-width: 350px)
+              font-size: 2.4rem
+
+            .correct
+              color: #1CCE8E
+
+            .incorrect
+              color: #FF5A5A
+
+          .logoIcon
+            height: 4.6rem
+            width: 4.6rem
+
+        .challengeView
+          position: absolute
+          display: none
+          top: 8.5rem
+          left: 0
+          width: 100%
+          height: calc(100% - 14.8rem)
+          background: #FFFFFF
+          flex-direction: column
+
+          @media screen and (min-width: 350px)
+            height: calc(100% - 15.8rem)
+
+          &.show
+            display: flex
+
+        .challengeQuestion
+          padding: 2rem 3rem 3rem
+          font-size: 1.7rem
+          line-height: 2.1rem
+          font-weight: 600
+
+        .challengeAnswer
+          display: flex
+          flex-grow: 1
+          border-top: .1rem solid #F5F5F5
+          font-size: 1.4rem
+          font-weight: 400
+
+          .input
+            visibility: hidden
+            width: 0
+            height: 0
+
+          .label
+            display: flex
+            width: 100%
+            align-items: center
+            padding: 0 3rem
+            cursor: pointer
+
+            &::before
+              content: ""
+              border: .1rem solid #D8D8D8
+              margin-right: 2rem
+              height: 2.7rem
+              width: 2.7rem
+              border-radius: 50%
+
+          .input:checked
+            + label::before
+              background: radial-gradient(circle, #008093 0%, #008093 45%, white 45%)
+
+        .challengeSubmit
+          position: absolute
+          bottom: 0
+          left: 0
+          height: 6.5rem
+          width: 100%
+          background: #008093
+          border-radius: 0 0 2rem 2rem
+          cursor: pointer
+          color: #FFFFFF
+          font-size: 2.2rem
+          font-weight: 600
+
+          @media screen and (min-width: 350px)
+            height: 7.5rem
+            font-size: 2.4rem
+
+        .challengeResultView
+          padding: 7rem 0
+          text-align: center
+
+          .resultHeader
+            font-size: 3.2rem
+            font-weight: 600
+            margin-bottom: 6rem
+            padding: 0 3rem
+
+          .resultText
+            font-size: 1.6rem
+            font-weight: 600
+
+          .correctAnswer
+            font-size: 1.4rem
+            border-top: .1rem solid #F5F5F5
+            border-bottom: .1rem solid #F5F5F5
+            padding: 3rem
+            margin-top: 3rem
+
 
     .eyeSection
       padding: $global-padding
