--- a/src/index.sass
+++ b/src/index.sass
@@ -52,6 +52,7 @@ h1
 .inViewBottom, .inViewRight, .inViewLeft
   opacity: 0
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out
+  -webkit-transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out
 
 .inViewBottom
   transform: translateY(5rem) translateZ(0)
