--- a/src/routes/team.sass
+++ b/src/routes/team.sass
@@ -15,16 +15,16 @@
     width: 100%
 
     > .text
-      align-items: center
-      display: flex
-      height: 100vh
-      margin-top: -19rem
-      min-height: 70rem
       position: relative
+      display: flex
+      align-items: center
+      height: #{'max(50vh, 100vh - 32rem)'}
+      min-height: 45rem
+      margin-top: -19rem
 
       > h1
         font-weight: bold
-        margin-left: 10rem
+        margin-left: 5rem
         max-width: 84rem
         position: relative
         z-index: 1
@@ -50,7 +50,7 @@
       position: relative
 
       > .text
-        margin: 0 0 6rem 10rem
+        margin: 0 0 5rem 5rem
 
         > h1
           color: $color-red
