--- a/src/animations.sass
+++ b/src/animations.sass
@@ -43,4 +43,11 @@
   100%
     opacity: 1
 
+@keyframes animateIn
+  from
+    opacity: 0
+    transform: translateY(-1rem)
+  to
+    opacity: 1
+    transform: none
 
