--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -15,16 +15,16 @@
     width: 100%
 
     > .heroText
-      align-items: center
-      display: flex
-      height: 100vh
-      margin-top: -19rem
-      min-height: 70rem
       position: relative
+      display: flex
+      align-items: center
+      height: #{'max(50vh, 100vh - 38rem)'}
+      min-height: 45rem
+      margin-top: -19rem
 
       > h1
         font-weight: bold
-        margin-left: 10rem
+        margin-left: 5rem
         max-width: 84rem
         position: relative
         white-space: pre-line
@@ -45,7 +45,7 @@
       padding: 0 1rem
 
       > .text
-        margin: 0 0 10rem 10rem
+        margin: 0 0 7rem 5rem
 
         > h1
           color: $color-red
@@ -63,6 +63,8 @@
         position: relative
         right: 1rem
         width: calc(100% + 2rem)
+        animation: animateIn .5s ease forwards
+        opacity: 0
 
         > .workplace
           display: flex
@@ -125,7 +127,7 @@
       padding: 0 1rem
 
       > .text
-        margin-left: 10rem
+        margin-left: 5rem
 
         > h1
           color: $color-red
