--- a/src/routes/work.sass
+++ b/src/routes/work.sass
@@ -25,6 +25,9 @@
       margin-top: -19rem
       position: relative
 
+      @media screen and (min-width: 1100px)
+        height: #{'max(50vh, 100vh - 35rem)'}
+
       > h1
         font-weight: bold
         margin-left: 5rem
