--- a/src/routes/home.sass
+++ b/src/routes/home.sass
@@ -25,6 +25,9 @@
       min-height: 45rem
       position: relative
 
+      @media screen and (min-width: 1100px)
+        height: #{'max(70vh, 100vh - 100rem)'}
+
       > h1
         font-weight: bold
         margin-left: 5rem
