--- a/src/routes/team.sass
+++ b/src/routes/team.sass
@@ -18,9 +18,12 @@
       position: relative
       display: flex
       align-items: center
-      height: #{'max(50vh, 100vh - 32rem)'}
+      height: calc(100vh - 27rem)
       min-height: 45rem
       margin-top: -19rem
+
+      @media screen and (min-width: 1100px)
+        height: calc(100vh - 30rem)
 
       > h1
         font-weight: bold
