--- a/src/cases/wake-up-problem.sass
+++ b/src/cases/wake-up-problem.sass
@@ -145,6 +145,9 @@
           font-size: 2.2rem
           font-weight: 600
 
+          &.hide
+            display: none
+
           @media screen and (min-width: 350px)
             height: 7.5rem
             font-size: 2.4rem
@@ -156,7 +159,7 @@
           .resultHeader
             font-size: 3.2rem
             font-weight: 600
-            margin-bottom: 6rem
+            margin-bottom: 5rem
             padding: 0 3rem
 
           .resultText
