Updated button styles in Bookmark component and Device block component

--- a/src/cases/antistress.sass
+++ b/src/cases/antistress.sass
@@ -1,7 +1,7 @@
 @import '../settings.sass'
 
 .view
-  background: #fff
+  background: #F0FEF8
   color: #161D2B
   width: 100%
   position: relative
