--- a/src/cases/nordish-market.sass
+++ b/src/cases/nordish-market.sass
@@ -2,7 +2,7 @@
 
 .view
   background: #FFFFFF
-  color: #070B13
+  color: $color-darker-blue
   width: 100%
   position: relative
   padding-top: 14rem
