--- a/src/cases/retts-plus.sass
+++ b/src/cases/retts-plus.sass
@@ -1,7 +1,7 @@
 @import '../settings.sass'
 
 .view
-  background: #070B13
+  background: $color-darker-blue
   color: #fff
   width: 100%
   position: relative
