Background color update in Paykartan case page

--- a/src/cases/paykartan.sass
+++ b/src/cases/paykartan.sass
@@ -1,7 +1,7 @@
 @import '../settings.sass'
 
 .view
-  background: #fff
+  background: #FFF5F5
   color: #161D2B
   width: 100%
   position: relative
