Button style update in Text block component

--- a/src/cases/components/text-block.sass
+++ b/src/cases/components/text-block.sass
@@ -42,25 +42,9 @@
         line-height: 2.8rem
         opacity: 0.8
 
-    > a
-      margin-top: -0.7rem
-      font-size: 1.8rem
-      color: $color-red
-      text-decoration: none
-
-      &:after
-        content: ''
-        display: inline-block
-        position: relative
-        top: 0.6rem
-        margin: 2rem 0.5rem 0 2rem
-        background: url('../../images/arrow-red.svg') no-repeat 0 0/100%
-        width: 7.7rem
-        height: 2.3rem
-        transition: margin 0.2s ease
-
-      &:hover::after
-        margin: 2rem 0 0 2.5rem
+    > .link
+      margin-top: 2rem
+      align-self: flex-start
 
     > img
       margin: 7rem auto 0
