Started adding Annotell case

--- a/src/cases/components/large-image.sass
+++ b/src/cases/components/large-image.sass
@@ -77,6 +77,9 @@
   &.sleepcure
     padding-bottom: 0
 
+  &.annotell
+    max-height: 100rem
+
   &.nordish
     background: #F4F8F8
     padding: 2rem 0
