--- a/src/cases/annotell.sass
+++ b/src/cases/annotell.sass
@@ -1,10 +1,12 @@
 @import '../settings.sass'
 
 $annotellDarkBlue: #0A0F19
+$titleColor: #070B13
+$textColor: #737780
 
 .view
   background: white
-  color: $color-darker-blue
+  color: $titleColor
   width: 100%
   position: relative
   padding-top: 14rem
@@ -91,7 +93,12 @@ $annotellDarkBlue: #0A0F19
 
       h1
         max-width: 72rem
+        margin-left: auto
+        margin-right: auto
         color: white
+
+        @media screen and (min-width: 850px)
+          margin: 0
 
         @media screen and (min-width: 2000px)
           margin: 0 auto
@@ -99,9 +106,15 @@ $annotellDarkBlue: #0A0F19
       p
         max-width: 58rem
         margin-top: 3rem
+        margin-left: auto
+        margin-right: auto
         font-size: 2rem
         line-height: 2.8rem
         color: #737780
+
+        @media screen and (min-width: 850px)
+          margin-left: 0
+          margin-right: 0
 
         @media screen and (min-width: 1400px)
           max-width: 72rem
@@ -159,3 +172,196 @@ $annotellDarkBlue: #0A0F19
 
         @media screen and (min-width: 540px)
           max-width: 47rem
+
+  .intuitiveDesignSection
+    position: relative
+    height: 80rem
+    padding:
+    overflow: hidden
+
+    @media screen and (min-width: 570px)
+      height: 102rem
+
+    @media screen and (min-width: 1024px)
+      height: 128rem
+
+    @media screen and (min-width: 1150px)
+      height: 154rem
+
+    @media screen and (min-width: 1400px)
+      height: 180rem
+
+    &::after
+      content: ''
+      position: absolute
+      bottom: 0
+      left: 0
+      background: linear-gradient(to top, white 0%, rgba(255,255,255,0) 100%)
+      height: 23rem
+      width: 100%
+
+      @media screen and (min-width: 450px)
+        height: 42rem
+
+    .textContent
+      width: 100%
+      max-width: 120rem
+      padding: 6rem 3rem 10rem
+      margin: auto
+      text-align: center
+
+      @media screen and (min-width: 450px)
+        padding: 8rem 3rem 10rem
+
+      @media screen and (min-width: 850px)
+        padding: 12rem 3rem 10rem
+        text-align: left
+
+      @media screen and (min-width: 1150px)
+        padding: 20rem 3rem 10rem
+
+      @media screen and (min-width: 2000px)
+        text-align: center
+
+      h1
+        max-width: 58rem
+        color: $titleColor
+        font-size: 4rem
+        font-weight: 600
+        margin: 0 auto
+
+        @media screen and (min-width: 850px)
+          font-size: 5.5rem
+          max-width: 64rem
+          margin: 0
+
+        @media screen and (min-width: 1150px)
+          font-size: 7.2rem
+          line-height: 8.8rem
+          max-width: 70rem
+
+        @media screen and (min-width: 2000px)
+          margin: 0 auto
+
+    .desktopImages
+      display: none
+
+      @media screen and (min-width: 850px)
+        display: block
+
+    .mobileImages
+      @media screen and (min-width: 850px)
+        display: none
+
+    .image
+      position: absolute
+
+      &:nth-of-type(1)
+        left: 0
+        bottom: 0
+
+      &:nth-of-type(2)
+        right: 0
+        bottom: 0
+
+    .desktopImages .image
+      &:nth-of-type(1)
+        max-width: 59rem
+
+        @media screen and (min-width: 1024px)
+          max-width: 75rem
+
+        @media screen and (min-width: 1150px)
+          max-width: 86rem
+
+        @media screen and (min-width: 1400px)
+          max-width: 107rem
+
+        @media screen and (min-width: 2000px)
+          max-width: 153rem
+          bottom: -60rem
+
+      &:nth-of-type(2)
+        max-width: 39rem
+
+        @media screen and (min-width: 1024px)
+          max-width: 49rem
+
+        @media screen and (min-width: 1150px)
+          max-width: 56rem
+
+        @media screen and (min-width: 1400px)
+          max-width: 70rem
+
+        @media screen and (min-width: 2000px)
+          max-width: 100rem
+          bottom: -60rem
+
+    .mobileImages .image
+      &:nth-of-type(1)
+        max-width: 26rem
+
+        @media screen and (min-width: 570px)
+          max-width: 39rem
+
+      &:nth-of-type(2)
+        max-width: 23rem
+
+        @media screen and (min-width: 570px)
+          max-width: 34rem
+
+  .twoTextCols
+    display: flex
+    flex-direction: column
+    width: 100%
+    max-width: 120rem
+    padding: 5rem 3rem 10rem
+    margin: auto
+    text-align: center
+
+    @media screen and (min-width: 850px)
+      flex-direction: row
+      justify-content: space-between
+      padding: 10rem 3rem 12rem
+      text-align: left
+
+    @media screen and (min-width: 1100px)
+      padding: 12rem 3rem 16rem
+
+    .column
+      width: 100%
+      max-width: 54rem
+      margin: 0 auto
+
+      @media screen and (min-width: 850px)
+        width: calc(50% - 2rem)
+        margin: 0
+
+      @media screen and (min-width: 1024px)
+        width: calc(50% - 4rem)
+
+      &:not(:first-of-type)
+        margin-top: 5rem
+
+        @media screen and (min-width: 850px)
+          margin: 0
+
+    .title
+      margin-bottom: 2rem
+      font-size: 3rem
+      line-height: 3.6rem
+      color: $titleColor
+
+      @media screen and (min-width: 850px)
+        font-size: 4rem
+        line-height: 4.7rem
+        font-weight: 500
+
+    .text
+      font-size: 1.6rem
+      line-height: 2.2rem
+      color: $textColor
+
+      @media screen and (min-width: 850px)
+        font-size: 2rem
+        line-height: 2.8rem
