--- a/src/cases/annotell.sass
+++ b/src/cases/annotell.sass
@@ -127,6 +127,11 @@ $textColor: #737780
 
       @media screen and (min-width: 1024px)
         display: block
+        position: absolute
+        left: 0
+        bottom: 0
+        width: 100%
+        height: 100%
 
     .mobileImages
       @media screen and (min-width: 1024px)
@@ -365,3 +370,123 @@ $textColor: #737780
       @media screen and (min-width: 850px)
         font-size: 2rem
         line-height: 2.8rem
+
+  .digitalIdentity
+
+    img
+      height: 57rem
+
+      @media screen and (min-width: 850px)
+        height: auto
+
+    \:global(.content)
+      padding: 3rem
+
+    h1
+      font-size: 3rem
+      line-height: 3.6rem
+
+      @media screen and (min-width: 850px)
+        padding-bottom: 4rem !important
+        font-size: 9.6rem
+        line-height: 11.5rem
+
+    p
+      opacity: 1 !important
+      font-size: 1.6rem !important
+      line-height: 2.2rem !important
+
+      @media screen and (min-width: 850px)
+        font-size: 2rem !important
+        line-height: 2.8rem !important
+
+  .brandBlocks
+    display: flex
+    flex-direction: column
+    background: $annotellDarkBlue
+
+    @media screen and (min-width: 850px)
+      flex-direction: row
+
+    .brandBlock
+      position: relative
+      display: flex
+      width: 100%
+
+      @media screen and (min-width: 850px)
+        width: 50%
+        flex-direction: column
+
+    .logoBlock
+      position: relative
+      width: 50%
+      height: 0
+      padding-bottom: 50%
+
+      @media screen and (min-width: 850px)
+        width: 100%
+        padding-bottom: 100%
+
+      &:nth-of-type(1)
+        background: url('../images/cases/annotell-pointcloud-bg-1.png') no-repeat
+        background-size: cover
+
+      &:nth-of-type(2)
+        background: url('../images/cases/annotell-pointcloud-bg-2.png') no-repeat
+        background-size: cover
+
+      img
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        max-width: 13rem
+
+        @media screen and (min-width: 850px)
+          max-width: none
+
+    .typographyBlock
+      flex-direction: column
+      padding: 6rem 3rem 8rem
+      text-align: center
+      align-items: center
+
+      @media screen and (min-width: 850px)
+
+        text-align: left
+
+    .typographyContent
+      width: 100%
+      max-width: 40rem
+
+      &:not(:first-of-type)
+        margin-top: 5rem
+
+      .label
+        margin-bottom: 3rem
+        font-size: 1.4rem
+        color: $textColor
+
+      .brandImage
+        max-width: 100%
+
+        &.colors
+          padding: 0 3rem
+
+          @media screen and (min-width: 850px)
+            padding: 0
+            max-width: 26rem
+
+        &.iconsDesktop
+          display: none
+
+          @media screen and (min-width: 850px)
+            display: block
+            max-width: 31rem
+
+        &.iconsMobile
+          padding: 0 3rem
+
+          @media screen and (min-width: 850px)
+            display: none
+            padding: 0
