Update margins on mobile frontend challenge

--- a/src/routes/frontend-challenge.sass
+++ b/src/routes/frontend-challenge.sass
@@ -93,7 +93,6 @@
 
 .editor
   margin: -4.7rem -2rem
-  // margin-bottom: -50px
 
   \:global(.CodeMirror)
     background: transparent
@@ -143,3 +142,7 @@
     background: linear-gradient(135deg, #ec193e, #bb5e6e)
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
+
+@media screen and (max-width: 900px)
+  .second
+    padding: 15rem 4rem
