Fix issue with gradient in Safari

--- a/src/routes/frontend-challenge.sass
+++ b/src/routes/frontend-challenge.sass
@@ -139,6 +139,7 @@
   color: #ec193e
 
   @supports (-webkit-background-clip: text)
+    display: inline-block
     background: linear-gradient(135deg, #ec193e, #bb5e6e)
     -webkit-background-clip: text
     -webkit-text-fill-color: transparent
